--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^3.1.2",
     "pg": "^8.8.0",
     "react": "^18.2.0",
+    "react-bootstrap-typeahead": "^6.0.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
