--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-bootstrap-typeahead": "^6.0.0",
